@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.37.0
 
+              pnmshear: add -background, -noantialias.  Thanks
+              Erik Auerswald <auerswal@unix-ag.uni-kl.de>.
+
               pamx: fix bug with X depth = 0.
 
               pamx: fix bug: incorrect display of one-plane input image.
